--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -10,12 +10,12 @@
     android:fitsSystemWindows="true"
    >
 
-    <com.intelligence.androidapplication.ui.main.widget.NoSlidingViewPaper
+    <com.intelligence.androidapplication.ui.navigation.widget.NoSlidingViewPaper
         android:id="@+id/vp_main_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-    </com.intelligence.androidapplication.ui.main.widget.NoSlidingViewPaper>
+    </com.intelligence.androidapplication.ui.navigation.widget.NoSlidingViewPaper>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
