--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_wo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_home"/>
