--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,13 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
-    android:gravity="center"
+    android:gravity="center|top"
     android:orientation="vertical">
+
+    <Button
+        android:id="@+id/bt_scan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="扫一扫" />
 
     <TextView
         android:id="@+id/tv_wo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="首页" />
+        android:text="结果" />
 
 </LinearLayout>
