<imp 蔡晓双>优化扫描界面，添加条形码，手电筒功能

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,11 @@
         android:layout_height="wrap_content"
         android:text="结果" />
     <ImageView
-        android:id="@+id/iv_scan"
+        android:id="@+id/iv_qr_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/iv_bar_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
