--- a/CaiXiaoShuangLibrary/src/main/res/layout/capture.xml
+++ b/CaiXiaoShuangLibrary/src/main/res/layout/capture.xml
@@ -13,28 +13,39 @@
         android:id="@+id/viewfinder_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
-    
-    <RelativeLayout 
+
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_gravity="top"
         android:background="#99000000">
-        
+
         <ImageButton
             android:id="@+id/capture_imageview_back"
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/selector_capture_back"/>
-        
-        <TextView 
+            android:background="@drawable/selector_capture_back" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:text="扫一扫"
             android:textColor="#ffffffff"
-            android:textSize="20sp"
-            android:text="扫一扫"/>
-        
+            android:textSize="14sp" />
+
+        <ImageButton
+            android:id="@+id/ib_flash_lamp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:background="@drawable/flashlamp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp" />
+
     </RelativeLayout>
 
 </merge>
